Bug 102460,102496, 102446 : If chat is enabled, quick reply buttons do not work when quick reply box is at bottom, Chat window interferes while composing a mail or meeting invite, With chat enabled the horizontal scroll bar for messages is disabled - as attached
Changeset:
1. converse.css
2. zm_core.scss

The chat widget container currently occupies the entire bottom section of the screen, due to which the elements beneath this area become inaccessible.
Updated the chat widget container to occupy the minimum required space and only expand when necessary.

https://bugzilla.zimbra.com/show_bug.cgi?id=102460
https://bugzilla.zimbra.com/show_bug.cgi?id=102496
https://bugzilla.zimbra.com/show_bug.cgi?id=102446

Copied from Perforce
 Change: 560238

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1419,6 +1419,9 @@
  * Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
  * Licensed under the Mozilla Public License
  */
+#conversejs {
+  left: auto; }
+
 #conversejs #converse-roster dd a, .search-converse-contact dd a {
   /* ZCS - decline contact request icon */
   /* ZCS - accept contact request icon */ }
@@ -1545,3 +1548,5 @@
   position: fixed;
   margin-top: 0.1rem;
   margin-left: 0.3rem; }
+
+/*# sourceMappingURL=converse.css.map */
